[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Options.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=1]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 56.0
margin_right = 99.0
margin_bottom = 94.0
text = "Options"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -84.0
margin_right = 74.0
margin_bottom = 84.0
size_flags_horizontal = 2
__meta__ = {
"_edit_group_": true
}

[node name="MusicLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 38.0
text = "music"
align = 1

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
margin_top = 42.0
margin_right = 148.0
margin_bottom = 58.0
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 3
ticks_on_borders = true

[node name="SoundLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 62.0
margin_right = 148.0
margin_bottom = 100.0
text = "Sound"
align = 1

[node name="SoundSlider" type="HSlider" parent="CanvasLayer/VBoxContainer"]
margin_top = 104.0
margin_right = 148.0
margin_bottom = 120.0
max_value = 1.0
step = 0.05
value = 0.5
tick_count = 3
ticks_on_borders = true

[node name="BackButton" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 124.0
margin_right = 148.0
margin_bottom = 168.0
shortcut = SubResource( 2 )
text = "Back"

[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
